WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48211
[Qt] ImageBuffer::platformTransformColorSpace is unnecessarily slow
https://bugs.webkit.org/show_bug.cgi?id=48211
Summary
[Qt] ImageBuffer::platformTransformColorSpace is unnecessarily slow
Andreas Kling
Reported
2010-10-24 13:41:57 PDT
This function iterates over a QImage getting and setting every pixel with pixel() and setPixel(). This is ridiculously slow since it does bounds checking and detach() for every pixel. We should grab the bits() and do direct access.
Attachments
Proposed patch
(2.06 KB, patch)
2010-10-24 13:55 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-10-24 13:55:08 PDT
Created
attachment 71697
[details]
Proposed patch
Kenneth Rohde Christiansen
Comment 2
2010-10-24 13:59:12 PDT
Comment on
attachment 71697
[details]
Proposed patch Looks fine. Where did you run into this issue?
Andreas Kling
Comment 3
2010-10-24 14:01:59 PDT
(In reply to
comment #2
)
> (From update of
attachment 71697
[details]
) > Looks fine. Where did you run into this issue?
The SVG folks were discussing
http://svg-wow.org/filterEffects/chiseled.svg
so I gave it a spin in QtTestBrowser. I should have included that in the bug description, sorry. Thanks for reviewing! <3
Andreas Kling
Comment 4
2010-10-24 14:08:27 PDT
Comment on
attachment 71697
[details]
Proposed patch Clearing flags on attachment: 71697 Committed
r70424
: <
http://trac.webkit.org/changeset/70424
>
Andreas Kling
Comment 5
2010-10-24 14:08:36 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6
2010-10-24 17:58:58 PDT
http://trac.webkit.org/changeset/70424
might have broken Leopard Intel Debug (Tests) The following tests are not passing: editing/spelling/context-menu-suggestions.html editing/spelling/spellcheck-attribute.html editing/spelling/spelling-backspace-between-lines.html editing/spelling/spelling-contenteditable.html editing/spelling/spelling-textarea.html platform/mac/accessibility/attributed-string-includes-misspelled-with-selection.html platform/mac/accessibility/misspelled-attributed-string.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug