2010-10-24  Andreas Kling  <kling@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] ImageBuffer::platformTransformColorSpace is unnecessarily slow
        https://bugs.webkit.org/show_bug.cgi?id=48211

        Grab the QImage::bits() and do direct access instead of going through
        QImage::pixel() and QImage::setPixel().

        This is a performance optimization, so no new tests.

        * platform/graphics/qt/ImageBufferQt.cpp:
        (WebCore::ImageBuffer::platformTransformColorSpace):


Canonical link: https://commits.webkit.org/60961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70424 268f45cc-cd09-0410-ab3c-d52691b4dbfc